--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
 <div class=" container1">
   <h1>Supervisor</h1>
   Monitors activity to identify project roadblocks
-  <img class="container1image" src="images/icon-supervisor.svg" alt="supervisor image">
+  <img class="container1image" src="https://img.icons8.com/bubbles/100/000000/detective.png"/>
 </div>
 
 
 <div class="container2">
   <h1>Team Builder</h1>
   Scans our talent network to create the optimal team for your project
-  <img class="container2image" src="images/icon-team-builder.svg" alt="team builder image">
+  
+  <img class="container2image" src="https://img.icons8.com/clouds/100/000000/cottage.png"/>
 </div>
 <hr  class="line2" width="382px" >
 <div class="container3">
   <h1>Karma</h1>
   Regularly evaluates our talent to ensure quality
-  <img class="container3image" src="images/icon-karma.svg" alt="Karma image">
+  
+  <img class="container3image" src="https://img.icons8.com/color/96/000000/reflector-bulb.png"/>
 </div>
 
 <hr  class="line3" width="382px" >
@@ -51,7 +53,8 @@
 <div class="container4">
   <h1>Calculator</h1>
   Uses data from past projects to provide better delivery estimates
-  <img class="container4image" src="images/icon-calculator.svg" alt="calculator image">
+  
+  <img class="container4image" src="https://img.icons8.com/bubbles/100/000000/calculator.png"/>
 </div>
   
   <footer>
